# init

./: Cargo.toml  Makefile  README.md  hello-world.c
src/: main.rs
