[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Strip symbols from binary*

[dependencies]
# libc = { version = "0.2.153", default-features = false }
# linux-syscalls = { version = "0.4.0", default-features = false }
